package perbankan;

public class Tabungan {
    protected int saldo;
    public Tabungan(int saldo) { this.saldo = saldo; }
}